src/components/Navigation/navigation.scss
@import '../../_variables.scss';

.navigation {
  position: fixed;
  left: 0;
  right: 0;
  font-weight: 700;
  display: flex;
  justify-content: center;

  .menu{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 7px;
    padding: 13px;
    width: fit-content;
    border-radius: 50px;
    backdrop-filter: blur(20px) saturate(1.7);
    background: hsla(293, 43%, 12%, 0.71);
  }

  .item {
    padding: 10px 25px;
    border-radius: 50px;
    color: $text;
    transition: all .2s ease-in-out;

    &.is-active {
      background-color: $purple;
    }
  }
}

